remove double click on mobile

--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ h4{
 }
 .click-img{
   height: 200px;
-  width: 200px
+  width: 200px;
+  touch-action: manipulation
 }
 .hero-img {
   min-height: 75vh;
